--- a/restaurante/Bebidas.html
+++ b/restaurante/Bebidas.html
@@ -1,68 +1,74 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menú - Bebidas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <script src="cate.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="pizza.html">Categoría</a></li>
-            <li><a href="Carrito.html">Carrito de Compras</a></li>
-            <li><a href="DevsPage.html">Nuestro Equipo</a></li>
-        </ul>
+      <ul>
+        <li><a href="Home.html">Home</a></li>
+        <li><a href="pizza.html">Categoría</a></li>
+        <li><a href="Carrito.html">Carrito de Compras</a></li>
+        <li><a href="DevsPage.html">Nuestro Equipo</a></li>
+      </ul>
     </header>
-    
+
     <div class="main-content">
-        
+      <nav>
+        <button onclick="window.location.href='pizza.html'">Pizza</button>
+        <button onclick="window.location.href='hamburguesa.html'">
+          Hamburguesa
+        </button>
+        <button onclick="window.location.href='perro-caliente.html'">
+          Perro Caliente
+        </button>
+        <button onclick="window.location.href='snacks.html'">Snacks</button>
+        <button onclick="window.location.href='bebidas.html'">Bebidas</button>
+      </nav>
 
-        <nav>
-            <button onclick="window.location.href='pizza.html'">Pizza</button>
-            <button onclick="window.location.href='hamburguesa.html'">Hamburguesa</button>
-            <button onclick="window.location.href='perro-caliente.html'">Perro Caliente</button>
-            <button onclick="window.location.href='snacks.html'">Snacks</button>
-            <button onclick="window.location.href='bebidas.html'">Bebidas</button>
-        </nav>
+      <section class="menu-items">
+        <h2>Elige tu Bebida</h2>
+        <div class="menu-grid">
+          <div class="menu-item" data-nombre="Coca Cola" data-precio="1.50">
+            <img src="coca.jpg" alt="Coca Cola" />
+            <h3>Coca Cola</h3>
+            <p>$1.50</p>
+            <p>20 Disponibles</p>
+            <button class="agregar-carrito">Agregar al carrito</button>
+          </div>
+          <div
+            class="menu-item"
+            data-nombre="Jugo de Naranja"
+            data-precio="2.00"
+          >
+            <img src="naranja.jpg" alt="Jugo de Naranja" />
+            <h3>Jugo de Naranja</h3>
+            <p>$2.00</p>
+            <p>15 Disponibles</p>
+            <button class="agregar-carrito">Agregar al carrito</button>
+          </div>
+          <div class="menu-item" data-nombre="Agua" data-precio="1.00">
+            <img src="agua.jpg" alt="Agua" />
+            <h3>Agua</h3>
+            <p>$1.00</p>
+            <p>30 Disponibles</p>
+            <button class="agregar-carrito">Agregar al carrito</button>
+          </div>
+        </div>
+      </section>
 
-        <section class="menu-items">
-            <h2>Elige tu Bebida</h2>
-            <div class="menu-grid">
-                <div class="menu-item" data-nombre="Coca Cola" data-precio="1.50">
-                    <img src="coca.jpg" alt="Coca Cola">
-                    <h3>Coca Cola</h3>
-                    <p>$1.50</p>
-                    <p>20 Disponibles</p>
-                    <button class="agregar-carrito">Agregar al carrito</button>
-                </div>
-                <div class="menu-item" data-nombre="Jugo de Naranja" data-precio="2.00">
-                    <img src="naranja.jpg" alt="Jugo de Naranja">
-                    <h3>Jugo de Naranja</h3>
-                    <p>$2.00</p>
-                    <p>15 Disponibles</p>
-                    <button class="agregar-carrito">Agregar al carrito</button>
-                </div>
-                <div class="menu-item" data-nombre="Agua" data-precio="1.00">
-                    <img src="agua.jpg" alt="Agua">
-                    <h3>Agua</h3>
-                    <p>$1.00</p>
-                    <p>30 Disponibles</p>
-                    <button class="agregar-carrito">Agregar al carrito</button>
-                </div>
-            </div>
-        </section>
-
-        <section class="cart">
-            <h2>Carrito de Compras</h2>
-            <div class="cart-items"></div>
-            <p><strong>Subtotal:</strong> <span id="subtotal">$0.00</span></p>
-            <p><strong>Tax (10%):</strong> <span id="tax">$0.00</span></p>
-            <p><strong>Total:</strong> <span id="total">$0.00</span></p>
-            <button class="print-bill">Imprimir Factura</button>
-        </section>
+      <section class="cart">
+        <h2>Carrito de Compras</h2>
+        <div class="cart-items"></div>
+        <p><strong>Subtotal:</strong> <span id="subtotal">$0.00</span></p>
+        <p><strong>Tax (10%):</strong> <span id="tax">$0.00</span></p>
+        <p><strong>Total:</strong> <span id="total">$0.00</span></p>
+        <button class="print-bill">Imprimir Factura</button>
+      </section>
     </div>
-</body>
+  </body>
 </html>
