--- a/restaurante/perro-caliente.html
+++ b/restaurante/perro-caliente.html
@@ -1,71 +1,83 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menú - Perro Caliente</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <script defer src="cate.js"></script>
-</head>
-<body>
-    <aside>
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="pizza.html">Categoría</a></li>
-            <li><a href="Carrito.html">Carrito de Compras</a></li>
-            <li><a href="DevsPage.html">Nuestro Equipo</a></li>
-        </ul>
-    </aside>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li><a href="Home.html">Home</a></li>
+        <li><a href="pizza.html">Categoría</a></li>
+        <li><a href="Carrito.html">Carrito de Compras</a></li>
+        <li><a href="DevsPage.html">Nuestro Equipo</a></li>
+      </ul>
+    </header>
 
     <div class="main-content">
-        <header>
-            <input type="text" placeholder="Buscar categoría o menú">
-            <span>5 artículos agotados</span>
-        </header>
+      <header>
+        <input type="text" placeholder="Buscar categoría o menú" />
+        <span>5 artículos agotados</span>
+      </header>
 
-        <nav>
-            <button onclick="window.location.href='pizza.html'">Pizza</button>
-            <button onclick="window.location.href='Hamburguesa.html'">Hamburguesa</button>
-            <button onclick="window.location.href='perro-caliente.html'">Perro Caliente</button>
-            <button onclick="window.location.href='snacks.html'">Snacks</button>
-            <button onclick="window.location.href='bebidas.html'">Bebidas</button>
-        </nav>
+      <nav>
+        <button onclick="window.location.href='pizza.html'">Pizza</button>
+        <button onclick="window.location.href='Hamburguesa.html'">
+          Hamburguesa
+        </button>
+        <button onclick="window.location.href='perro-caliente.html'">
+          Perro Caliente
+        </button>
+        <button onclick="window.location.href='snacks.html'">Snacks</button>
+        <button onclick="window.location.href='bebidas.html'">Bebidas</button>
+      </nav>
 
-        <section class="menu-items">
-            <h2>Elige tu Perro Caliente</h2>
-            <div class="menu-grid">
-                <div class="menu-item" data-nombre="Perro Clásico" data-precio="3.50">
-                    <img src="perro.jpg" alt="Perro Clásico">
-                    <h3>Perro Clásico</h3>
-                    <p>$3.50</p>
-                    <p>12 Disponibles</p>
-                    <button class="agregar-carrito">Agregar al carrito</button>
-                </div>
-                <div class="menu-item" data-nombre="Perro Especial" data-precio="4.00">
-                    <img src="especial.jpg" alt="Perro Especial">
-                    <h3>Perro Especial</h3>
-                    <p>$4.00</p>
-                    <p>10 Disponibles</p>
-                    <button class="agregar-carrito">Agregar al carrito</button>
-                </div>
-                <div class="menu-item" data-nombre="Perro con Todo" data-precio="4.50">
-                    <img src="todo.jpg" alt="Perro con Todo">
-                    <h3>Perro con Todo</h3>
-                    <p>$4.50</p>
-                    <p>8 Disponibles</p>
-                    <button class="agregar-carrito">Agregar al carrito</button>
-                </div>
-            </div>
-        </section>
+      <section class="menu-items">
+        <h2>Elige tu Perro Caliente</h2>
+        <div class="menu-grid">
+          <div class="menu-item" data-nombre="Perro Clásico" data-precio="3.50">
+            <img src="perro.jpg" alt="Perro Clásico" />
+            <h3>Perro Clásico</h3>
+            <p>$3.50</p>
+            <p>12 Disponibles</p>
+            <button class="agregar-carrito">Agregar al carrito</button>
+          </div>
+          <div
+            class="menu-item"
+            data-nombre="Perro Especial"
+            data-precio="4.00"
+          >
+            <img src="especial.jpg" alt="Perro Especial" />
+            <h3>Perro Especial</h3>
+            <p>$4.00</p>
+            <p>10 Disponibles</p>
+            <button class="agregar-carrito">Agregar al carrito</button>
+          </div>
+          <div
+            class="menu-item"
+            data-nombre="Perro con Todo"
+            data-precio="4.50"
+          >
+            <img src="todo.jpg" alt="Perro con Todo" />
+            <h3>Perro con Todo</h3>
+            <p>$4.50</p>
+            <p>8 Disponibles</p>
+            <button class="agregar-carrito">Agregar al carrito</button>
+          </div>
+        </div>
+      </section>
 
-        <section class="cart">
-            <h2>Carrito de Compras</h2>
-            <div class="cart-items"></div>
-            <p><strong>Subtotal:</strong> <span id="subtotal">$0.00</span></p>
-            <p><strong>Tax (10%):</strong> <span id="tax">$0.00</span></p>
-            <p><strong>Total:</strong> <span id="total">$0.00</span></p>
-            <button class="print-bill">Imprimir Factura</button>
-        </section>
+      <section class="cart">
+        <h2>Carrito de Compras</h2>
+        <div class="cart-items"></div>
+        <p><strong>Subtotal:</strong> <span id="subtotal">$0.00</span></p>
+        <p><strong>Tax (10%):</strong> <span id="tax">$0.00</span></p>
+        <p><strong>Total:</strong> <span id="total">$0.00</span></p>
+        <button class="print-bill">Imprimir Factura</button>
+      </section>
     </div>
-</body>
+  </body>
 </html>
